[project]
name = "booking-service"
version = "0.1.0"
description = ""
authors = [
    {name = "ov4rlxrd",email = "denicdenicah@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath=["."]
testpaths=["tests"]
[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[tool.poetry]
package-mode = false